updated css for search page

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5451,8 +5451,8 @@ section.block.block-facetapi:first-child h2 {
     padding-top: 11px;
 }
 .current-search-item-active-items .item-list ul li a:after{
-    //background: rgba(0, 0, 0, 0) url("http://cdn1.kabbalah.com/university/icons/grey-x.svg") no-repeat scroll center center;
-    background-position: 0 -2350px; 
+    background: rgba(0, 0, 0, 0) url("http://cdn1.kabbalah.com/university/icons/grey-x.svg") no-repeat scroll center center;
+    //background-position: 0 -2350px; 
     color: transparent;
     content: "\2716";  
 }
@@ -5497,8 +5497,8 @@ section.block.block-facetapi:first-child h2 {
     width: 500px !important;
 }
 #block-custom-search-blocks-2 input#edit-submit.form-submit {
-    //background: transparent url("http://cdn1.kabbalah.com/university/icons/search-mag-glass.svg") no-repeat scroll right center;
-    background-position: 0 -2613px;
+    background: transparent url("http://cdn1.kabbalah.com/university/icons/search-mag-glass.svg") no-repeat scroll right center;
+    //background-position: 0 -2613px;
     background-color: transparent;  
     border: medium none;
     color: transparent;
