--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -55,10 +55,7 @@ a.jp-mute:after,
 a.jp-unmute:after,
 a.plusIcone,
 #courseDescription .bookmark label.checked,
-#searchFilterDetail label.element-invisible.checked,
-.current-search-item-active-items .item-list ul li a:after,
-#block-custom-search-blocks-2:after,
-#block-custom-search-blocks-2 input#edit-submit.form-submit{
+#searchFilterDetail label.element-invisible.checked{
     background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
     //background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
     background-repeat: no-repeat;
@@ -125,10 +122,7 @@ a.plusIcone,
 		a.jp-unmute:after,
 		a.plusIcone,
 		#courseDescription .bookmark label.checked,
-		#searchFilterDetail label.element-invisible.checked,
-		.current-search-item-active-items .item-list ul li a:after,
-		#block-custom-search-blocks-2:after,
-		#block-custom-search-blocks-2 input#edit-submit.form-submit{
+		#searchFilterDetail label.element-invisible.checked{
 			background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
 			//background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
 	        background-size: 322px 2879px; // those size should be the half on the original size
@@ -140,4 +134,7 @@ a.plusIcone,
         
 }
 
-// 
+
+	// .current-search-item-active-items .item-list ul li a:after,
+	// 	#block-custom-search-blocks-2:after,
+	// 	#block-custom-search-blocks-2 input#edit-submit.form-submit
