--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -55,7 +55,6 @@ a.jp-mute:after,
 a.jp-unmute:after,
 a.plusIcone,
 #courseDescription .bookmark label.checked,
-#searchFilterDetail label.element-invisible.checked,
 #block-custom-search-blocks-2:after{
     background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
     //background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
@@ -123,7 +122,6 @@ a.plusIcone,
 		a.jp-unmute:after,
 		a.plusIcone,
 		#courseDescription .bookmark label.checked,
-		#searchFilterDetail label.element-invisible.checked,
 		#block-custom-search-blocks-2:after{
 			background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
 			//background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
@@ -140,3 +138,4 @@ a.plusIcone,
 	// .current-search-item-active-items .item-list ul li a:after,
 	// 	#block-custom-search-blocks-2:after,
 	// 	#block-custom-search-blocks-2 input#edit-submit.form-submit
+	//  #searchFilterDetail label.element-invisible.checked,
