--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5421,8 +5421,8 @@ section.block.block-facetapi:first-child h2 {
     width: 18px;  
 }
 #searchFilterDetail label.element-invisible.checked{
-    //background: url("http://cdn1.kabbalah.com/university/icons/v.png") no-repeat scroll center 1px;
-    background-position: 1px -2332px; 
+    background: url("http://cdn1.kabbalah.com/university/icons/v.png") no-repeat scroll center 1px;
+    //background-position: 1px -2332px; 
 }
 
 #block-current-search-standard > h2 {
