--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -6187,6 +6187,9 @@ span.downloadAudio {
     #views-exposed-form-taxonomy-term-lesson-page .views-exposed-widget.views-submit-button {
         display: none;
     }
+    .element-invisible{
+        display: none;
+    }
 
 
 }
