--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -55,9 +55,12 @@ a.jp-mute:after,
 a.jp-unmute:after,
 a.plusIcone,
 #courseDescription .bookmark label.checked,
-#block-custom-search-blocks-2:after{
-    background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
-    //background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
+.current-search-item-active-items .item-list ul li a:after,
+#block-custom-search-blocks-2:after,
+#block-custom-search-blocks-2 input#edit-submit.form-submit,
+#searchFilterDetail label.element-invisible.checked{
+    //background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
+    background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
     background-repeat: no-repeat;
 }
 
@@ -122,10 +125,13 @@ a.plusIcone,
 		a.jp-unmute:after,
 		a.plusIcone,
 		#courseDescription .bookmark label.checked,
-		#block-custom-search-blocks-2:after{
-			background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
-			//background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
-	        background-size: 322px 2321px; // those size should be the half on the original size
+		#block-custom-search-blocks-2:after,
+		.current-search-item-active-items .item-list ul li a:after,
+		#block-custom-search-blocks-2 input#edit-submit.form-submit,
+	 	#searchFilterDetail label.element-invisible.checked{
+			//background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
+			background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
+	        background-size: 322px 2879px; // those size should be the half on the original size
 		}
 		.newHeaderWrapperMobileMenuLogo{
 			// height: 24px;
@@ -134,9 +140,3 @@ a.plusIcone,
         
 }
 
-
-
-	// .current-search-item-active-items .item-list ul li a:after,
-	// 	#block-custom-search-blocks-2:after,
-	// 	#block-custom-search-blocks-2 input#edit-submit.form-submit
-	//  #searchFilterDetail label.element-invisible.checked,
