updated css (search page)

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5681,18 +5681,18 @@ section.block.block-facetapi:first-child h2 {
         color: #a7a2a2 !important;
     }
 }
-#block-custom-search-blocks-2 input.apachesolr-autocomplete::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+#block-custom-search-blocks-2 input.custom-search-box.form-text::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    #208fdc;
 }
-#block-custom-search-blocks-2 input.apachesolr-autocomplete:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+#block-custom-search-blocks-2 input.custom-search-box.form-text:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color:    #208fdc;
    opacity:  1;
 }
-#block-custom-search-blocks-2 input.apachesolr-autocomplete::-moz-placeholder { /* Mozilla Firefox 19+ */
+#block-custom-search-blocks-2 input.custom-search-box.form-text::-moz-placeholder { /* Mozilla Firefox 19+ */
    color:    #208fdc;
    opacity:  1;
 }
-#block-custom-search-blocks-2 input.apachesolr-autocomplete:-ms-input-placeholder { /* Internet Explorer 10-11 */
+#block-custom-search-blocks-2 input.custom-search-box.form-text:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color:    #208fdc;
 }
 .not-logged-in.page-user form#user-login-form .item-list ul{
