added image default size for collection page

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5601,6 +5601,7 @@ section.block.block-facetapi:first-child h2 {
     margin-bottom: 18px;
 }
 .imageCover {
+    height: 170px; 
     width: 300px;
 }
 .lessonBlockTitle {
